# qwen3api

./: .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  config.example.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py
.bmad-core/: install-manifest.yaml
.windsurf/rules/: analyst.md  architect.md  dev.md
app/: __init__.py  api.py  client.py  config.py  main.py  validators.py
docs/: Qwen_API_analysis.md  architecture_optimization_report.md  qwen_chat_analysis.md
scripts/: cleanup_port.py
tests/: test_api.py  test_client.py
